Use initial capacity for map if possible (#1057)
* Use initial capacity for map if possible